[package]
name = "test-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio ={ version = "*", features = ["full"]}
hyper = {version = "1.2.0", features = ["full"]}
tower = "0.4.13"
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
mime = "0.3.17"
serde_json = "1.0.115"
serde ={ version = "*", features = ["derive"]}
tower-http = { version = "0.5.0", features = ["trace"] }
